# Operating_Systems

./: README.md
Banker's_algorithm/new/: Banker.py  new_test.py
HW3/: Note
HW3/6/Debug/: makefile
HW3/6/Debug/src/: Q6.d  subdir.mk
HW3/6/Q6/: Q6.cbp  Q6.layout  main.c
HW3/6/Q6/src/: Q6.c
HW3/6/src/: Q6.c
HW3/7/Q7/: Q7.cbp  Q7.depend  Q7.layout  main.c
HW3/7/Q7/Debug/: Q7  makefile
HW3/7/Q7/Debug/src/: Q7.d  subdir.mk
HW3/7/Q7/src/: Q7.c
MiniProject/: Report_9431022_Yasaman_Mirmohammad.odt
MiniProject/Linux/MultiProcess/: CMakeLists.txt  test.c
MiniProject/Linux/MultiThread/: CMakeLists.txt  main.c
MiniProject/Linux/MultiThread/pthreads/: test.c
MiniProject/Linux/SingleThread/: CMakeLists.txt  main.c
MiniProject/Windows/MultiProcess/: CMakeLists.txt
MiniProject/Windows/MultiThread/: CMakeLists.txt  test.c  test.txt
MiniProject/Windows/SingleThread/: main.c
OS_LAB/: makefile.sample  pthreads1.c
OS_LAB/CodeExamples/: CMakeLists.txt
OS_LAB/CodeExamples/process/: forkex1.c  forkex2.c  systemex.c
OS_LAB/CodeExamples/pthreads/: pthreads1.c  pthreads_condition.c  pthreads_mutex.c
OS_LAB/FinalProject/: 9431022_Yasaman_Mirmohammad_Report.docx  README.md
OS_LAB/FinalProject/Simple Linux Driver/: device_file.c  main.c
OS_LAB/FinalProject/misc/: MakeFile.txt  Makefile  misc_sample.c
OS_LAB/OS_Lab_Kill_Bash/: new.sh  new.txt
OS_LAB/Presentation/: Escalus.pptx
OS_LAB/Test_Bash_PhoneBook/: new.sh  phone.sh  searchPhoneBook.sh  test.sh
